Add teacher eligibility onboarding
